# casper-agentic-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AI_ARCHITECTURE_GUIDE.md  AI_CAPABILITIES_SUMMARY.md  AI_COMMAND_REFERENCE.md  AI_DOCUMENTATION_INDEX.md  AI_NFT_TESTING_GUIDE.md  Dockerfile  INDEX.md  MCP_FIX_SUMMARY.md  NFT_DEPLOYMENT_WORKFLOW.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SNAPSHOT.md  SETUP.md  USER_GUIDE.md  docker-compose.yml  portfolio_cache.json  requirements.txt  skills-lock.json
.agents/evals/odra-casper-testnet-deploy/: evals.json  grade.py
.agents/evals/odra-casper-testnet-deploy/iteration-1/: benchmark.json  benchmark.md  review.html
.agents/evals/odra-casper-testnet-deploy/iteration-1/eval-0/: eval_metadata.json
.agents/evals/odra-casper-testnet-deploy/iteration-1/eval-1/: eval_metadata.json
.agents/evals/odra-casper-testnet-deploy/iteration-1/eval-2/: eval_metadata.json
.agents/skills/odra-casper-testnet-deploy/: SKILL.md
smart-contract/: Cargo.toml  Odra.toml
smart-contract/src/: collection_factory.rs  lib.rs  nft_marketplace.rs  token_factory.rs
smart-contract/wasm/: CollectionFactory.wasm  Greeter.wasm  NftMarketplace.wasm  TokenFactory.wasm
src/: account_analyzer.py  agent.py  contract_registry.py  conversation.py  main.py  mcp_client.py  monitor.py  portfolio_cache.py  tools.py
src/public/: admin.html  debug.html  index.html  monitor.html  portfolio.html
tests/: test_integration.py
(+12 files in other folders)
