[package]
name = "casper-agentic-token-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.8.1"

[dev-dependencies]

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"
odra-cli = "2.8.1"

[[bin]]
name = "casper_agentic_token_factory_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_agentic_token_factory_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "casper_agentic_token_factory_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
